--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
       }
 
       .avatar-placeholder {
-        width: 200px;
-        height: 200px;
+        width: 300px;
+        height: 300px;
         background-color: #d8d8e8;
         border-radius: 50%;
         display: flex;
@@ -119,10 +119,9 @@
         font-size: 8rem;
         font-weight: bold;
         margin-left: auto;
-        margin-right: 0;
-        opacity: 0.8;
         border: 4px solid #6c5ce7;
         overflow: hidden;
+        margin-top: -100px;
       }
 
       .avatar-placeholder span {
@@ -211,37 +210,22 @@
         );
       }
 
-      #skill-tabs-nav {
+      #skill-sections-container {
+        display: grid;
+        grid-template-columns: repeat(4, minmax(0, 1fr)); /* Always 4 columns */
+        gap: 2rem; /* Gap between columns and rows */
+      }
+
+      .skill-column {
         display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        gap: 1rem;
-        margin-bottom: 2rem;
+        flex-direction: column;
       }
 
-      .tab-button {
-        padding: 0.75rem 1.5rem;
-        border-radius: 9999px;
-        font-weight: 600;
-        cursor: pointer;
-        transition: background-color 0.3s, color 0.3s;
-        background-color: #4a4a7a;
-        color: #f8f8ff;
-        border: none;
-      }
-
-      .tab-button.active {
-        background-color: #6c5ce7;
-        color: white;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-      }
-
-      .skill-category-content {
-        display: none;
-      }
-
-      .skill-category-content.active {
-        display: block;
+      .skill-column-title {
+        font-size: 1.25rem; /* text-xl */
+        font-weight: 700; /* font-bold */
+        margin-bottom: 1rem; /* mb-4 */
+        color: #6C5CE7; /* text-purple-700 */
       }
 
       .skill-progress-item {
@@ -254,7 +238,6 @@
         align-items: center;
         margin-bottom: 0.5rem;
         font-weight: 500;
-
         font-size: 0.95rem;
       }
 
@@ -457,7 +440,7 @@
       <section id="hero">
         <canvas id="hero-d3-canvas"></canvas>
         <div
-          class="relative z-10 container mx-auto px-6 py-16 md:py-24 flex items-center justify-between flex-col-reverse md:flex-row"
+          class="relative z-10 container mx-auto px-16 py-16 md:py-24 flex items-center justify-between flex-col-reverse md:flex-row"
         >
           <div class="text-left w-full md:w-3/5">
             <h2
@@ -506,14 +489,14 @@
             class="w-full md:w-2/5 flex justify-center md:justify-end relative z-10"
           >
             <div class="avatar-placeholder">
-              <span>👨‍💻</span>
+              <span><img src="/shankar-bhattarai.jpeg" alt="Shankar Bhattarai"/></span>
             </div>
           </div>
         </div>
       </section>
 
       <section id="experience" class="bg-white">
-        <div class="container mx-auto px-6 py-16 md:py-24">
+        <div class="container mx-auto px-6 py-16 md:py-16">
           <h3 class="text-3xl font-bold text-center mb-12 main-heading">
             Professional Experience
           </h3>
@@ -524,25 +507,17 @@
       </section>
 
       <section id="skills">
-        <div class="container mx-auto px-6 py-16 md:py-24">
+        <div class="container mx-auto px-6 py-16 md:py-16">
           <h3 class="text-3xl font-bold text-center mb-4 main-heading">
-            Skills & Core Competencies
+            Skills & Tools
           </h3>
-          <p class="text-center text-gray-700 mb-12">
-            An organized overview of my technical capabilities.
-          </p>
 
-          <div
-            id="skill-tabs-nav"
-            class="flex justify-center flex-wrap gap-4 mb-8"
-          ></div>
-
-          <div id="skill-tabs-content"></div>
+          <div id="skill-sections-container"></div>
         </div>
       </section>
 
       <section id="education" class="bg-white">
-        <div class="container mx-auto px-6 py-16 md:py-24">
+        <div class="container mx-auto px-6 py-16 md:py-16">
           <h3 class="text-3xl font-bold text-center mb-12 main-heading">
             Education
           </h3>
@@ -727,8 +702,7 @@
         const educationContainer = document.getElementById(
           "education-container"
         );
-        const skillsTabsNav = document.getElementById("skill-tabs-nav");
-        const skillsTabsContent = document.getElementById("skill-tabs-content");
+        const skillSectionsContainer = document.getElementById('skill-sections-container');
 
         function getPrimaryColorFromGradient(gradientString) {
           const match = gradientString.match(/rgb\((\d+),\s*(\d+),\s*(\d+)\)/);
@@ -794,72 +768,36 @@
           educationContainer.appendChild(card);
         });
 
-        let firstCategory = true;
         for (const category in resumeData.skills) {
-          const tabButton = document.createElement("button");
-          tabButton.textContent = category;
-          tabButton.className = "tab-button";
-          tabButton.setAttribute("data-category", category);
-          if (firstCategory) {
-            tabButton.classList.add("active");
-          }
-          skillsTabsNav.appendChild(tabButton);
+            const categoryColumn = document.createElement('div');
+            categoryColumn.className = 'skill-column';
 
-          const tabContentDiv = document.createElement("div");
-          tabContentDiv.id = `skills-${category
-            .toLowerCase()
-            .replace(/\s/g, "-")}-content`;
-          tabContentDiv.className = "skill-category-content";
-          if (firstCategory) {
-            tabContentDiv.classList.add("active");
-          }
+            const categoryTitle = document.createElement('h4');
+            categoryTitle.className = 'skill-column-title';
+            categoryTitle.textContent = category;
+            categoryColumn.appendChild(categoryTitle);
 
-          const skillsList = document.createElement("div");
+            const skillsList = document.createElement('div');
+            skillsList.className = 'space-y-4';
 
-          skillsList.className =
-            "grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-x-8 gap-y-4";
-
-          for (const skillName in resumeData.skills[category]) {
-            const proficiency = resumeData.skills[category][skillName];
-            const skillItem = document.createElement("div");
-            skillItem.className = "skill-progress-item";
-            skillItem.innerHTML = `
-                        <div class="skill-progress-header">
-                            <span>${skillName}</span>
-                            <span class="skill-progress-percentage">${proficiency}%</span>
-                        </div>
-                        <div class="skill-progress-bar-container">
-                            <div class="skill-progress-bar-fill" style="width: ${proficiency}%"></div>
-                        </div>
-                    `;
-            skillsList.appendChild(skillItem);
-          }
-          tabContentDiv.appendChild(skillsList);
-          skillsTabsContent.appendChild(tabContentDiv);
-
-          firstCategory = false;
+            for (const skillName in resumeData.skills[category]) {
+                const proficiency = resumeData.skills[category][skillName];
+                const skillItem = document.createElement('div');
+                skillItem.className = 'skill-progress-item';
+                skillItem.innerHTML = `
+                    <div class="skill-progress-header">
+                        <span>${skillName}</span>
+                        <span class="skill-progress-percentage">${proficiency}%</span>
+                    </div>
+                    <div class="skill-progress-bar-container">
+                        <div class="skill-progress-bar-fill" style="width: ${proficiency}%"></div>
+                    </div>
+                `;
+                skillsList.appendChild(skillItem);
+            }
+            categoryColumn.appendChild(skillsList);
+            skillSectionsContainer.appendChild(categoryColumn);
         }
-
-        skillsTabsNav.querySelectorAll(".tab-button").forEach((button) => {
-          button.addEventListener("click", () => {
-            skillsTabsNav
-              .querySelectorAll(".tab-button")
-              .forEach((btn) => btn.classList.remove("active"));
-            skillsTabsContent
-              .querySelectorAll(".skill-category-content")
-              .forEach((content) => content.classList.remove("active"));
-
-            button.classList.add("active");
-            const targetCategory = button.getAttribute("data-category");
-            document
-              .getElementById(
-                `skills-${targetCategory
-                  .toLowerCase()
-                  .replace(/\s/g, "-")}-content`
-              )
-              .classList.add("active");
-          });
-        });
 
         const modal = document.getElementById("details-modal");
         const modalContent = modal.querySelector(".transform");
